# erp_expedition

./: .gitignore  README.md  package.json  pyproject.toml
docs/: script-layer-filters.md
expedition/: __init__.py  boot.py  hooks.py  install.py  patches.txt  tasks.py
expedition/api/: __init__.py  action.py  activity.py  icon.py  insight.py  layer.py  map.py  metric.py  permission.py  pin.py  zone.py
expedition/patches/v0_3_0/: _child_table_migration.py  add_layer_pin_min_zoom.py  migrate_expedition_layer_filter_json_to_child_table.py  migrate_expedition_layer_group_config_to_child_table.py  migrate_expedition_map_filters_json_to_child_table.py
expedition/patches/v0_4_0/: migrate_layers_to_map_child_table.py
expedition/public/styles/: liberty-green.json  liberty-pale.json  liberty-sat.json
expedition/templates/: base.html
expedition/tests/: test_dot_walk.py  test_insights.py  test_popup_template.py  test_smoke.py  test_whitelist.py
expedition/tests/fixtures/: __init__.py  sample_layer.py  sample_map.py
expedition/www/: expedition.html  expedition.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  sdk.js
frontend/src/api/: client.js  heatmap.js  icons.js  skins.js
frontend/src/components/: AdvancedGroupingModal.vue  Basemap.vue  BasemapPanel.vue  CommandPalette.vue  ConfirmModal.vue  ContextMenu.vue  CoordReadout.vue  EmbeddedListView.vue  FilterBuilder.vue  FloatingToolbar.vue  LayerEditor.vue  LayerPanel.vue  Legend.vue  LoadingOverlay.vue  MapPopup.vue  MapToolTray.vue  (+5 more)
(+53 files in other folders)
