[project]
name = "expedition"
authors = [
    { name = "OneHash", email = "engineering@onehash.ai"}
]
description = "A Frappe-native geospatial intelligence platform. Turn any Frappe DocType into interactive, layered maps with save/load configurations, styling, analytics, and insights."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# Node integration (Vite-built frontend assets bundled into the app)
[tool.bench.node]
yarn = true
